PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 8.2.0RC4

- Core:
  . Fixed bug GH-9655 (Pure intersection types cannot be implicitly nullable)
    (Girgias)

- Streams:
  . Fixed bug GH-9590 (stream_select does not abort upon exception or empty
    valid fd set). (Arnaud)

29 Sep 2022, PHP 8.2.0RC3

- Core:
  . Fixed observer class notify with Opcache file_cache_only=1. (ilutov)

- Date:
  . Fixed bug with parsing large negative numbers with the @ notation. (Derick)

- Core:
  . Fixes segfault with Fiber on FreeBSD i386 architecture. (David Carlier)

- Fileinfo:
  . Fixed bug GH-8805 (finfo returns wrong mime type for woff/woff2 files).
    (Anatol)

- Opcache:
  . Added indirect call reduction for jit on x86 architectures. (wxue1)

- Sockets:
  . Fixed socket constants regression as of PHP 8.2.0beta3. (Bruce Dou)

- Session:
  . Fixed GH-9584 (Avoid memory corruption when not unregistering custom session
    handler). (ilutov)
  . Fixed bug GH-9583 (session_create_id() fails with user defined save handler
      that doesn't have a validateId() method). (Girgias)

- Standard:
  . Revert "Fixed parse_url(): can not recognize port without scheme."
    (andypost)

15 Sep 2022, PHP 8.2.0RC2

- Core:
  . Fixed bug GH-9500 (Using dnf type with parentheses after readonly keyword
    results in a parse error). (ilutov)
  . Fixed bug GH-9516 ((A&B)|D as a param should allow AB or D. Not just A).
    (Girgias)

- GMP
  . Fixed bug GH-9308 (GMP throws the wrong error when a GMP object is passed
    to gmp_init()). (Girgias)

- Intl
  . Fixed bug GH-9421 (Incorrect argument number for ValueError in NumberFormatter).
    (Girgias)

- Opcache:
  . Fixed bug GH-9259 (opcache.interned_strings_buffer setting integer
    overflow). (Arnaud)

- OpenSSL:
  . Fixed bug GH-9517 (Compilation error openssl extension related to PR
    GH-9366). (Jakub Zelenka)
