@@ -5,6 +5,8 @@ PHP                                                                        NEWS
 - Core:
   . Fixed bug GH-9655 (Pure intersection types cannot be implicitly nullable)
     (Girgias)
+  . Fixed bug GH-9589 (dl() segfaults when module is already loaded). (cmb,
+    Arnaud)
 
 - Streams:
   . Fixed bug GH-9590 (stream_select does not abort upon exception or empty
